--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^4.13.0",
-    "mssql": "^9.0.1"
+    "mssql": "^9.0.1",
+    "pg": "^8.8.0"
   }
 }
